# deft-cli

./: .gitignore  Cargo.toml
src/: main.rs
template-android/app/: build.gradle
template-ohos/AppScope/: app.json5
